Refactored admin dashboard and related views to use a shared layout helper and updated routes to include super admin and role-based permissions

--- a/.env.example
+++ b/.env.example
@@ -10,9 +10,7 @@ APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=file
-# APP_MAINTENANCE_STORE=database
-
-PHP_CLI_SERVER_WORKERS=4
+APP_MAINTENANCE_STORE=database
 
 BCRYPT_ROUNDS=12
 
@@ -21,12 +19,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=hall_seat_management
+DB_USERNAME=root
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -48,14 +46,36 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_SCHEME=null
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+# Mail Configuration
+# Change MAIL_MAILER from 'log' to 'smtp' to enable actual email sending
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=rahatmi0001@gmail.com
+MAIL_PASSWORD=nnmpgjwnisnsptoo
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=rahatmi0001@gmail.com
+MAIL_FROM_NAME="NSTU Hall Management"
+
+# Alternative mail configurations:
+# For Gmail:
+# MAIL_MAILER=smtp
+# MAIL_HOST=smtp.gmail.com
+# MAIL_PORT=587
+# MAIL_USERNAME=your-gmail@gmail.com
+# MAIL_PASSWORD=your-app-password (not your regular password)
+# MAIL_ENCRYPTION=tls
+
+# For Outlook/Hotmail:
+# MAIL_MAILER=smtp
+# MAIL_HOST=smtp-mail.outlook.com
+# MAIL_PORT=587
+# MAIL_USERNAME=your-email@outlook.com
+# MAIL_PASSWORD=your-password
+# MAIL_ENCRYPTION=tls
+
+# For testing (emails will be logged instead of sent):
+# MAIL_MAILER=log
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
